--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - ./:/usr/src/app 
-    command: sh -c "cd hello-next && npm run dev"
+      - ./:/usr/src/app
+    command: sh -c "cd nextjs-blog && npm run dev"
     ports:
       - "3000:3000"
