--- a/nextjs-blog/Dockerfile
+++ b/nextjs-blog/Dockerfile
@@ -1,4 +1,24 @@
-FROM node:14.17.0
-WORKDIR /nextjs-blog
-RUN npm install
-WORKDIR /usr/src/app
+FROM node:18.2.0 AS builder
+
+# ビルドには devDependencies もインストールする必要があるため
+ENV NODE_ENV=development
+
+WORKDIR /app
+COPY package.json ./
+COPY yarn.lock ./
+RUN yarn install
+COPY . .
+RUN yarn build
+
+
+FROM node:18.2.0-slim AS runner
+ENV NODE_ENV=production
+
+WORKDIR /app
+COPY package.json ./
+COPY yarn.lock ./
+RUN yarn install --production
+COPY --from=builder /app/next.config.js ./
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/public ./public
+CMD ["yarn", "start"]
