--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -1,22 +1,29 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "autoprefixer": "*",
-    "create-next-app": "^12.1.0",
-    "gray-matter": "*",
-    "next": "latest",
-    "postcss": "*",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "tailwindcss": "*",
-    "remark": "*",
-    "remark-html": "*",
-    "date-fns": "*",
-    "swr": "*"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "og": "openapi --input ./openapi.json --output ./generated --useUnionTypes",
+        "mock": "prism mock ./openapi.json -p 8080"
+    },
+    "dependencies": {
+        "next": "~12",
+        "react": "~18",
+        "react-dom": "~18",
+        "recoil": "~0",
+        "recoil-persist": "~4",
+        "swr": "~1"
+    },
+    "devDependencies": {
+        "tailwindcss": "~3",
+        "@types/node": "~17",
+        "@types/react": "~18",
+        "typescript": "~4",
+        "autoprefixer": "~10",
+        "postcss": "~8",
+        "@stoplight/prism-cli": "^4.9.3",
+        "openapi-typescript-codegen": "^0.22.0",
+        "prism": "^4.1.2"
+    }
 }
