--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -13,9 +13,7 @@
         "react-dom": "~18",
         "recoil": "~0",
         "recoil-persist": "~4",
-        "swr": "~1"
-    },
-    "devDependencies": {
+        "swr": "~1",
         "tailwindcss": "~3",
         "@types/node": "~17",
         "@types/react": "~18",
@@ -25,5 +23,7 @@
         "@stoplight/prism-cli": "^4.9.3",
         "openapi-typescript-codegen": "^0.22.0",
         "prism": "^4.1.2"
+    },
+    "devDependencies": {
     }
 }
